--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "dompurify": "^3.2.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "next": "15.4.4",
@@ -22,6 +23,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.6.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
