--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "dompurify": "^3.2.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
-    "next": "15.4.4",
+    "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.29",
     "nodemailer": "^6.10.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
@@ -31,7 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4"
   }
 }
